--- a/patientor-be/package.json
+++ b/patientor-be/package.json
@@ -14,13 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
